credential and url change

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -1,4 +1,4 @@
-url=https://khi.medicallienmgt.com/login.aspx?SessionExpired=
+url=https://staging.appedology.pk/marina/login
 browser=chrome
-username=upload1.docs
-password=REDHATredhat1!@#
+username=admin@admin.com
+password=123456
