--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Marina</name>
 	<!-- FIXME change it to the project's website -->
-	<url>https://khi.medicallienmgt.com</url>
+	<url>https://staging.appedology.pk/marina/login</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
