--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -2,3 +2,42 @@ url=https://staging.appedology.pk/marina/login
 browser=chrome
 email=admin@admin.com
 password=123456
+
+
+
+
+space_name= Space_tbt_001
+
+parking_fixed=FIXED
+parking_Unit_Period=UNIT PERIOD
+
+2
+capacity_single_boat=SINGLE BOAT
+capacity_multi_boat=MULTIPLE BOAT
+
+3
+pricing_t1=$/ft/period
+pricing_t2=$/sq.ft/period
+pricing_t3=c
+
+4
+p_plane_nightly=Nightly
+p_plane_Monthly=Monthly
+p_plane_Yearly=Yearly
+p_plane_multi=Monthly,Yearly
+5
+rate_group_New_rate_group=Create New Rate Group 
+rate_group_Wet_Storage=Wet Storage
+rate_group_Dry_Storage=Dry Storage
+6
+Include_in_occupancy_no=No
+Include_in_occupancy_yes=Yes
+
+
+space_group= SpaceGroup_tbt_001
+boat_group = BoatGroup_tbt_001
+
+
+
+
+
