mutli spaces adding, verify add space add correctly, changing in home page.

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -8,28 +8,28 @@ password=123456
 
 space_name= Space_tbt_001
 
-parking_fixed=FIXED
-parking_Unit_Period=UNIT PERIOD
+parking_fixed=Boat
+parking_Unit_Period=Car/Trailer
 
-2
-capacity_single_boat=SINGLE BOAT
-capacity_multi_boat=MULTIPLE BOAT
 
-3
+capacity_single_boat=Single
+capacity_multi_boat=Multiple
+
+
 pricing_t1=$/ft/period
 pricing_t2=$/sq.ft/period
 pricing_t3=c
 
-4
+
 p_plane_nightly=Nightly
 p_plane_Monthly=Monthly
 p_plane_Yearly=Yearly
 p_plane_multi=Monthly,Yearly
-5
-rate_group_New_rate_group=Create New Rate Group 
+
+rate_group_New_rate_group=Create New Rate Group
 rate_group_Wet_Storage=Wet Storage
 rate_group_Dry_Storage=Dry Storage
-6
+
 Include_in_occupancy_no=No
 Include_in_occupancy_yes=Yes
 
