Complete Spaces & Calendar Module,onhold TC416 & TC605

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -2,3 +2,4 @@ url=https://staging.appedology.pk/marina/login
 browser=chrome
 email=admin@admin.com
 password=123456
+logout_url=https://staging.appedology.pk/marina/logout
