Space Group Module Completed

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -1,5 +1,5 @@
-url=https://staging.appedology.pk/marina/login
+url=https://staging.appedology.pk/marina_test/login
 browser=chrome
 email=admin@admin.com
 password=123456
-logout_url=https://staging.appedology.pk/marina/logout
+logout_url=https://staging.appedology.pk/marina_test/logout
