--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -1,4 +1,4 @@
-url=https://staging.appedology.pk/marina/login
+url=https://staging.appedology.pk/marina_test/login
 browser=chrome
 email=admin@admin.com
 password=123456
