Integrated with fully working code

--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -3,3 +3,5 @@ browser=chrome
 email=admin@admin.com
 password=123456
 logout_url=https://staging.appedology.pk/marina_test/logout
+timeout=60
+implicit_wait_timeout=10
