Reservation cases from TC1201-TC1203

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
 			<artifactId>google-api-client-jackson2</artifactId>
 			<version>1.20.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
